--- a/TylorPortfolio/Areas/Customer/Views/Home/MVCDemo.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/MVCDemo.cshtml
@@ -18,7 +18,7 @@
                                 <p class="card-title text-warning text-center">by <b>@product.Author</b></p>
                             </div>
                             <div class="pl-1">
-                                <p class="text-primary opacity-75 text-uppercase text-center">
+                                <p class="text-primary text-opacity-75 text-center mb-0">
                                     List Price: 
                                     <span class="text-decoration-line-through">
                                         @product.ListPrice.ToString("c")
