--- a/TylorPortfolio/Views/Shared/_Layout.cshtml
+++ b/TylorPortfolio/Views/Shared/_Layout.cshtml
@@ -72,10 +72,13 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="Hangman">Hangman!</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="Index">Games</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="Hangman">Hangman</a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="SimonSays">SimonSays!</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Games" asp-action="SimonSays">Simon Says</a>
                                 </li>
                             </ul>
                         </li>
@@ -99,8 +102,7 @@
 
     <footer class="border-top footer bg-primary text-white-50">
         <div class="container">
-            &copy; 2023 - Tylor's Portfolio - <a asp-area="" asp-controller="About" asp-action="Index">About Me</a>
-            - Made with <i class="bi bi-heart-fill"></i> by Tylor Christian Trub
+            &copy; 2023 - Tylor's Portfolio - Made with <i class="bi bi-heart-fill"></i> by Tylor Christian Trub
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
