--- a/TylorPortfolio/Areas/Admin/Views/Motorcycle/Index.cshtml
+++ b/TylorPortfolio/Areas/Admin/Views/Motorcycle/Index.cshtml
@@ -9,12 +9,12 @@
     </h1>
     <br />
     <a asp-controller="Motorcycle" asp-action="Collection" class="btn btn-primary text-center align-items-center p-4" style="height:70px; width:33%">
-        <i class="bi bi-box2-heart"></i> Visit my Motorcycle Collection and footage
+        <i class="bi bi-box2-heart"></i> &nbsp Visit my Motorcycle footage
     </a>
     <br />
     <br />
     <br />
     <a asp-controller="Motorcycle" asp-action="Store" class="btn btn-primary text-center align-items-center p-4" style="height:70px; width:33%">
-        <i class="bi bi-shop-window"></i> Visit Motorcycle Store
+        <i class="bi bi-shop-window"></i> &nbsp Visit Motorcycle Store
     </a>
 </div>
