--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -8,11 +8,37 @@
     <div class="card">
         <h3 class="display-4 card-header">Hello, my name is Tylor C. Trub.</h3>
         <div class="card-body p-4">
-            <p>I am a full-stack developer, with a C#.NET back-end focus.</p>
-            <p>Check out my projects, example labs, and examples of my work above.</p>
-            <p>I host the majority of my code on <a href="https://github.com/DontDoThat21">GitHub</a>.</p>
-            <p>Feel free to relax and play some <a asp-controller="Games" asp-action="Index">HTML5/CSS3 games</a> I've created.</p>
-            <p>Available 8am EST to 5pm EST. <a href="mailto:tylortrub@gmail.com">tylortrub@gmail.com</a></p>
+
+            <table class="table table-bordered table-striped overflow-hidden">
+                <tbody>
+                    <tr>
+                        <td>
+                            I am a full-stack developer, with a C#.NET back-end focus.
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Check out my projects, example labs, and examples of my work above.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            I host the majority of my code on <a href="https://github.com/DontDoThat21">GitHub</a>.
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Relax and play some <a asp-controller="Games" asp-action="Index">HTML5/CSS3 games</a> I've created.</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            Available 8am EST to 5pm EST. <a href="mailto:tylortrub@gmail.com">tylortrub@gmail.com
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
             <h2 class="text-center">
                 <a asp-controller="Home" asp-action="MVCDemo">
