Added project repository. Added project to unit of work. Added project to dbsets. Renamed game repository. Added project model.

--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -19,7 +19,7 @@
                     </tr>
                     <tr>
                         <td>
-                            Check out my projects, example labs, and examples of my work above.
+                            Check out my <a asp-controller="Projects" asp-action="Index">projects</a>, example labs, and examples of my work above.
                         </td>
                     </tr>
                     <tr>
