--- a/TylorPortfolio/Areas/Admin/Views/Motorcycle/Collection.cshtml
+++ b/TylorPortfolio/Areas/Admin/Views/Motorcycle/Collection.cshtml
@@ -33,33 +33,27 @@
 
 @model HomeViewModel
 
-<div class="container-fluid p-0 @Model.MotorcycleVideoList[0].Id">
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators" >
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
+<div id="videoCarousel" class="carousel slide" data-bs-ride="carousel">
+
+    <ol class="carousel-indicators">
+        <li data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="1"></li>
+        <li data-bs-target="#myCarousel" data-bs-slide-to="2"></li>
     </ol>
+
+
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="/Images/home/home1.jpg" class="img-fluid" alt="01" />
+            <iframe src="@Model.MotorcycleVideoList[0].VideoUrl" width="1600" height="900" frameborder="0" allowfullscreen></iframe>
+@*             <video src="video1.mp4" autoplay loop muted></video> *@        
         </div>
         <div class="carousel-item">
-            <img src="/Images/home/home2.jpg" class="img-fluid" alt="02" />
-        </div>
-        <div class="carousel-item">
-            <img src="/Images/home/home3.jpg" class="img-fluid" alt="03" />
+            @for (int i = 1; i < Model.MotorcycleVideoList.Count; i++)
+            {
+                <iframe src="@Model.MotorcycleVideoList[i].VideoUrl" width="1600" height="900" frameborder="0" allowfullscreen></iframe>
+            }
         </div>
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
 </div>
 
 <h2>Motorcycling Videos</h2>
@@ -91,48 +85,3 @@
 <br />
 <br />
 <br />
-<div class="row d-flex text-center justify-content-center border-0">
-    <h2>Motorcycling pictures</h2>
-
-    <img class="col-3 rounded" src="@(picturePath)homebike1.jpg" />
-    <div class="col"></div>
-    <img class="col-3 rounded" src="@(picturePath)homebikedetroit1.jpg" />
-    <div class="col"></div>
-    <img class="col-3 rounded" src="@(picturePath)homebikejoslyn1.jpg" />    
-    <div class="col"></div>
-
-
-    @for (int i = 0; i < Model.MotorcycleVideoList.Count; i++)
-    {
-        <iframe src="@Model.MotorcycleVideoList[i].VideoUrl" width="1600" height="900" frameborder="0" allowfullscreen></iframe>
-    }
-
-    @foreach (var video in Model.MotorcycleVideoList)
-    {
-        
-    }
-    
-    <p>CAROUSEL TEST 2</p>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img class="d-block w-100" src="..." alt="First slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Second slide">
-            </div>
-            <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Third slide">
-            </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-
-</div>
