Fixed area for projects.

--- a/TylorPortfolio/Views/Shared/_Layout.cshtml
+++ b/TylorPortfolio/Views/Shared/_Layout.cshtml
@@ -34,37 +34,40 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="Index">All Projects</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="Index">All Projects</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="MauiTodos">.NET Maui Todo List</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="MauiTodos">.NET Maui Todo List</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="AngularEmployeeManager">Angular 16 Employee Manager</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="AngularEmployeeManager">Angular 16 Employee Manager</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="AngularAPI">.NET FW Angular API</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="AngularAPI">.NET FW Angular API</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="HotSBot">HotS OCR Bot</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="HotSBot">HotS OCR Bot</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="JavaSystemLocker">Java System Locker</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="PythonMaze">Python Maze</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="WinFormsTodos">Win Forms Todos</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="JavaSystemLocker">Java System Locker</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="ModernDesignPizzaStore">WPF Pizza Store</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="WinFormsTodos">Win Forms Todos</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="FlickrPhotoSearcher">Flickr Photo Searcher</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="ModernDesignPizzaStore">WPF Pizza Store</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="FrameworkWebForms">Student Registration w/ Web Forms</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="FlickrPhotoSearcher">Flickr Photo Searcher</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" asp-area="Admin" asp-controller="Projects" asp-action="CppCalculator">C++ WinForms Calculator</a>
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="FrameworkWebForms">Student Registration w/ Web Forms</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="Customer" asp-controller="Projects" asp-action="CppCalculator">C++ WinForms Calculator</a>
                                 </li>
                             </ul>
                         </li>
