--- a/TylorPortfolio/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -4,11 +4,14 @@
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Order Placed Successfully!</h1>
         Your Order Number is : @Model <br /><br />
-        <img src="~/images/lawn_leaf.jpg" width="65%" />
+        <img src="~/images/product/lawn_leaf.jpg" width="65%" />
     </div>
     <div class="col-12 text-center" style="color:maroon">
         <br />
-        Your order has been placed successfully! <br />
+        <p class="text-primary">
+            Your order has been placed successfully!
+        </p>
+        <br />
     </div>
 
 </div> 
