Fixed project urls. Added static sizes to images.

--- a/TylorPortfolio/Areas/Customer/Views/Projects/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Projects/Index.cshtml
@@ -32,7 +32,7 @@
                     @project.Language
                 </td>
                 <td>
-                    <img src="~/Images/project/@project.ProjectPhoto">
+                    <img src="~/Images/project/@project.ProjectPhoto" width="400px" height="300px">
                 </td>
                 <td>
                     @project.Url
