Added order.js, index and relevant navigation to managed orders. If the last image is active in the porfolio images, do not draw the wavy navigation directive.

--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -96,7 +96,11 @@
                 <div class="col-6"></div>
                 <div class="col-6" >
                     <br>
-                    <img src="~/Images/home/lineTopRightBottomLeftWavy.png" class="img-fluid border-0 rounded">
+                    @if (!(i == Model.PortfolioImageList.Count))
+                    {
+                        <img src="~/Images/home/lineTopRightBottomLeftWavy.png" class="img-fluid border-0 rounded">
+
+                    }
 
                 </div>
             </div>
