--- a/TylorPortfolio/Views/Shared/_Layout.cshtml
+++ b/TylorPortfolio/Views/Shared/_Layout.cshtml
@@ -29,6 +29,13 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                        <li class="nav-seperator">
+                            |
+                        </li>
+                        <li>
+                            <a class="nav-link" asp-area="Admin" asp-controller="Order" asp-action="Index">Manage Order</a>
+                        </li>
                         <li class="nav-seperator">
                             |
                         </li>
