When there are no more resources/content to draw on the index view, two break lines will now be added. Updated and improved Privacy view. Updated user login view's text. Updated main layout view and moved order management to a more logical place, after the books navigation. Fixed an issue where the footer wasn't centering it's text/updated CSS for footer. Updated collection view with in-dev notice. Updated details view with in-dev notice.

--- a/TylorPortfolio/Areas/Admin/Views/Motorcycle/Collection.cshtml
+++ b/TylorPortfolio/Areas/Admin/Views/Motorcycle/Collection.cshtml
@@ -33,6 +33,10 @@
 
 @model HomeViewModel
 
+<p>
+    Note: This page is still under development.
+</p>
+
 <div id="videoCarousel" class="carousel slide" data-bs-ride="carousel">
 
     <ol class="carousel-indicators">
