--- a/TylorPortfolio/Areas/Admin/Views/Motorcycle/Details.cshtml
+++ b/TylorPortfolio/Areas/Admin/Views/Motorcycle/Details.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Motorcycle Details";
 }
 
+Note: This page is still under development.
+
 <h1>Motorcycle details:</h1>
 
 @model Motorcycle
