--- a/TylorPortfolio/Areas/Customer/Views/Home/Privacy.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Privacy.cshtml
@@ -4,8 +4,9 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>My (Tylor Trub) site does not collect personally identifiable information about the actions made,
-    or patterns of usage of the site. Feel free to go wild and attempt to break anything, 
-    knowing that I am not liable for any mistakes you make.
-
-    Thank you for your understanding, Tylor.
+    or patterns of usage of the site. Depending on how you created your account(s), the addresses you entered may be stored in the site's database. Feel free to go wild and attempt to break anything.    
+</p>
+<p>
+    Thank you for visiting, 
+    <br />&nbsp;&nbsp;&nbsp;&nbsp; - Tylor.
 </p>
