--- a/TylorPortfolio/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TylorPortfolio/Areas/Identity/Pages/Account/Login.cshtml
@@ -64,9 +64,8 @@
                         {
                             <div>
                                 <p>
-                                    There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
-                                        article
-                                        about setting up this ASP.NET application to support logging in via external services
+                                    There are no external authentication services configured. Note to self, see: <a href="https://go.microsoft.com/fwlink/?LinkID=532715">
+                                        MS article about setting up ASP.NET applications to support logging in via external OAuth2 services
                                     </a>.
                                 </p>
                             </div>
