--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -100,6 +100,11 @@
                     {
                         <img src="~/Images/home/lineTopRightBottomLeftWavy.png" class="img-fluid border-0 rounded">
                     }
+                    else
+                    {
+                        <br />
+                        <br />
+                    }
                 </div>
             </div>
         }
