--- a/TylorPortfolio/wwwroot/css/site.css
+++ b/TylorPortfolio/wwwroot/css/site.css
@@ -38,9 +38,9 @@ body {
 
 footer {
     position: absolute;
-    bottom: 0;
     width: 100%;
     height: 50px;
+    text-align: center;
 }
 
 .nav-seperator {
