Fixed a syntax error with email link.

--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                     </tr>
                     <tr>
                         <td>
-                            Available 8am to 5pm EST. <a href="mailto:tylortrub@gmail.com">tylortrub@gmail.com
+                            Available 8am to 5pm EST. <a href="mailto:tylortrub@gmail.com"/>tylortrub@gmail.com
                         </td>
                     </tr>
                 </tbody>
