Removed improper tag.

--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                     </tr>
                     <tr>
                         <td>
-                            Relax and play some <a asp-controller="Games" asp-action="Index">HTML5/CSS3 games</a> I've created.</a>
+                            Relax and play some <a asp-controller="Games" asp-action="Index">HTML5/CSS3 games</a> I've created.
                         </td>
                     </tr>
                     <tr>
