Renamed utility namespace to Client.BL. Fixed appsettings organization.

--- a/TylorPortfolio/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/TylorPortfolio/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using TylorTrubPortfolio.Areas.Identity
 @using TylorTrubPortfolio.Areas.Identity.Pages
-@using TylorTrubPortfolio.Utility
+@using TylorTrubPortfolio.Client.BL
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
