--- a/TylorPortfolio/Areas/Customer/Views/_ViewImports.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using TylorTrubPortfolio
 @using TylorTrubPortfolio.DTO
 @using TylorTrubPortfolio.DTO.ViewModels
-@using TylorTrubPortfolio.Utility
+@using TylorTrubPortfolio.Client.BL
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
