Added namespaces to area views.

--- a/TylorPortfolio/Areas/Admin/Views/Motorcycle/Store.cshtml
+++ b/TylorPortfolio/Areas/Admin/Views/Motorcycle/Store.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using TylorTrubPortfolio.DTO.Models
+@{
     ViewData["Title"] = "Motorcycle Store";
     string picturePath = "/Images/home/motorcycle/";
 }
