--- a/TylorPortfolio/Areas/Customer/Views/Home/Details.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Details.cshtml
@@ -1,4 +1,5 @@
-﻿@model ShoppingCart
+﻿@using TylorTrubPortfolio.DTO.Models
+@model ShoppingCart
 
 <form method="post">
     <input hidden asp-for="ProductId" />
