--- a/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
 
 
 <div class="container-lg">
-    @for (int i = 0; i < Model.PortfolioImageList.Count; i++)
+    @for (int i = 0; i < Model.PortfolioImageList.Count - 1; i++)
     {
         if (i % 2 == 0 || i == 0)
         {
@@ -96,7 +96,7 @@
                 <div class="col-6"></div>
                 <div class="col-6" >
                     <br>
-                    @if (!(i+1 == Model.PortfolioImageList.Count))
+                    @if (!(i == Model.PortfolioImageList.Count - 1))
                     {
                         <img src="~/Images/home/lineTopRightBottomLeftWavy.png" class="img-fluid border-0 rounded">
                     }
