Updated privacy index/statement.

--- a/TylorPortfolio/Areas/Customer/Views/Home/Privacy.cshtml
+++ b/TylorPortfolio/Areas/Customer/Views/Home/Privacy.cshtml
@@ -2,11 +2,15 @@
     ViewData["Title"] = "Privacy Policy";
 }
 <h1>@ViewData["Title"]</h1>
-
-<p>My (Tylor Trub) site does not collect personally identifiable information about the actions made,
-    or patterns of usage of the site. Depending on how you created your account(s), the addresses you entered may be stored in the site's database. Feel free to go wild and attempt to break anything.    
+<p>
+    My (Tylor Trub) developer portfolio site does not collect personally identifiable information about the actions made,
+    or patterns of usage of the site. Depending on how you created your account(s), the addresses you entered may be stored in the site's connected LOCAL database. Feel free to go wild and attempt to break anything.
+</p>
+<p>
+    Note to be extra clear: Not connected to any external Databases, but is in theory connected by default to the developers local MS Sql Server connection. You'd still have no data, and would need to run EF data migrations to create the dataset, first.
 </p>
 <p>
     Thank you for visiting, 
-    <br />&nbsp;&nbsp;&nbsp;&nbsp; - Tylor.
+    <br />
+    &nbsp;&nbsp;&nbsp;&nbsp; - Tylor.
 </p>
